<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/environmental"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/sports"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />


    <TextView
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/food"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <TextView
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/gongfu"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <TextView
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/entertainment"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />


    <TextView
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/massage"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <TextView
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/products"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/six" />


    <TextView
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/drug"
        android:textColor="@color/colorTextG3"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:background="@color/pure_white"
        android:gravity="center"
        android:text="@string/recommend"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

</android.support.constraint.ConstraintLayout>