<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/include2"
        layout="@layout/top_back_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ivAvatar"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/avatar"
        android:textColor="@color/colorTextG6"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/ava_defaultx"
        android:id="@+id/ivAvatar"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ivAvatar"
        app:layout_constraintRight_toRightOf="@+id/tv_ivAvatar"
        app:layout_constraintTop_toTopOf="@+id/tv_ivAvatar" />

    <TextView
        android:id="@+id/relationshipTittle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableRight="@drawable/me_right"
        android:paddingRight="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/relationship"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ivAvatar" />

    <TextView
        android:gravity="end"
        android:id="@+id/relationship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
       android:hint="选择与您的关系"
        android:textColor="@color/colorTextG6"
        app:layout_constraintBottom_toBottomOf="@+id/relationshipTittle"
        app:layout_constraintRight_toRightOf="@+id/relationshipTittle"
        app:layout_constraintTop_toTopOf="@+id/relationshipTittle"
        app:layout_constraintVertical_bias="0.515" />




    <TextView
        android:id="@+id/nameTittle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/name"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relationshipTittle" />

    <EditText
        android:hint="填写你的姓名"
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:paddingRight="15dp"
        android:gravity="center_vertical|end"
        android:background="@null"
        android:maxLength="6"
        android:textColor="@color/colorTextG6"
        app:layout_constraintBottom_toBottomOf="@+id/nameTittle"
        app:layout_constraintRight_toRightOf="@+id/nameTittle"
        app:layout_constraintTop_toTopOf="@+id/nameTittle" />



    <TextView
        android:id="@+id/sexTittle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/sex"
        android:drawableRight="@drawable/me_right"
        android:paddingRight="15dp"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTittle" />


    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/male"
        android:textColor="@color/colorTextG6"
        app:layout_constraintBottom_toBottomOf="@+id/sexTittle"
        app:layout_constraintRight_toRightOf="@+id/sexTittle"
        app:layout_constraintTop_toTopOf="@+id/sexTittle" />

    <TextView
        android:id="@+id/birthdayTittle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/birthday"
        android:drawableRight="@drawable/me_right"
        android:paddingRight="15dp"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexTittle" />


    <TextView
        android:gravity="end"
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:hint="选择您的出生日期"
        android:textColor="@color/colorTextG6"
        app:layout_constraintBottom_toBottomOf="@+id/birthdayTittle"
        app:layout_constraintRight_toRightOf="@+id/birthdayTittle"
        app:layout_constraintTop_toTopOf="@+id/birthdayTittle" />

    <TextView
        android:id="@+id/phoneTittle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/phone_num"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayTittle" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:paddingRight="15dp"
        android:gravity="center_vertical|end"
        android:hint="填写你的手机号"
        android:maxLength="11"
        android:inputType="number"
        android:background="@null"
        android:textColor="@color/colorTextG6"
        app:layout_constraintBottom_toBottomOf="@+id/phoneTittle"
        app:layout_constraintRight_toRightOf="@+id/phoneTittle"
        app:layout_constraintTop_toTopOf="@+id/phoneTittle" />


    <TextView
        android:id="@+id/ok"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/pure_white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>