<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/include25"
        layout="@layout/top_back_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableLeft="@drawable/message_add3x"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/service_start"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include25" />


    <TextView
        android:id="@+id/tv_end"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableLeft="@drawable/message_add3x"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/service_end"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start" />

    <EditText
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/pure_white"
        android:drawableLeft="@drawable/message_add3x"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/service_num"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorTextG6"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end" />


    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/pure_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>