<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/include25"
        layout="@layout/top_back_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/shop"
        android:layout_width="0dp"
        android:layout_height="54dp"
    android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:drawableLeft="@drawable/join_icon_shop"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/colorTextG3"
        android:drawableRight="@drawable/me_right"
        android:paddingRight="15dp"
        android:text="@string/shop_join"
        android:background="@color/pure_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include25" />

    <TextView
        android:id="@+id/doctor"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:drawableLeft="@drawable/join_icon_doctor"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/colorTextG3"
        android:drawableRight="@drawable/me_right"
        android:paddingRight="15dp"
        android:background="@color/pure_white"
        android:text="@string/doctor_join"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop" />

    <TextView
        android:id="@+id/house"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:drawableLeft="@drawable/join_icon_service"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:background="@color/pure_white"
        android:textColor="@color/colorTextG3"
        android:drawableRight="@drawable/me_right"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/house_join"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor" />

</android.support.constraint.ConstraintLayout>